--- a/style.css
+++ b/style.css
@@ -202,3 +202,94 @@ color: white;
   cursor: pointer;
   color: darkgray;
 }
+
+/* Main Create */
+
+#main-create {
+  width: 80%;
+  height: auto;
+  min-height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto;
+  margin-bottom: 5%;
+  margin-top: 2.5%;
+}
+
+#create-container {
+  background-color: rgba(37, 48, 61, 1);
+  width: 80%;
+  height: 230px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
+  border-radius: 10px;
+}
+
+#create-container form {
+
+}
+
+#create-container form textarea {
+  margin-top: 2%;
+  padding: 1%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  margin-left: 15%;
+}
+
+#create-container form input[type=text] {
+  float: left;
+  padding: 0.25%;
+  font-size: 1.4em;
+  border: 0;
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  border-right: 2px solid white;
+  width: 50%;
+  padding-left: 2%;
+  color: white;
+}
+
+#create-container form span {
+  float: right;
+  text-align: center;
+  padding: 0.25%;
+  font-size: 1.4em;
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  border-left: 2px solid white;
+  width: 15%;
+  color: white;
+}
+
+#create-sidebar {
+  width: 16%;
+  float: left;
+  height: auto;
+  max-height: 108px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  padding: 5% 0% 5% 0%;
+  background-color: rgba(50, 70, 120, 1);
+  border-right: 1px solid white;
+}
+
+#create-sidebar ul {
+  list-style: none;
+  text-align: center;
+
+}
+
+#create-sidebar ul li {
+  padding: 9%;
+  transition: 0.5s;
+  color: white;
+}
+
+#create-sidebar ul li:hover {
+  background-color: rgba(37, 48, 61, 1);
+  cursor: pointer;
+}
