--- a/style.css
+++ b/style.css
@@ -9,6 +9,73 @@ html, body {
   height: 100%;
 }
 
+#cookie {
+  background-color: rgba(37, 48, 61, 0.8);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  color: white;
+  text-align: center;
+}
+
+#cookie p {
+  font-size: 1.3rem;
+  background-color: gray;
+  border: 2px solid white;
+  margin-top: 10%;
+  width: 50%;
+  min-width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5%;
+  border-radius: 10px;
+  animation: fadein 1s;
+}
+
+#cookie button {
+  background-color: transparent;
+  border: 0;
+  font-size: 1.3rem;
+  margin-top: 5%;
+  transition: 0.5s;
+  color: white;
+  float: right;
+}
+
+#cookie button:hover {
+  color: darkgray;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 #header {
   background-color: rgba(37, 48, 61, 1);
   text-align: center;
@@ -17,23 +84,59 @@ html, body {
   max-height: 80px;
 }
 
-#header a {
+#header h1 a:hover {
+  cursor: pointer;
+}
+
+#header h1 a {
   display: block;
   text-decoration: none;
   color: white;
   font-size: 2.5rem;
   color: white;
+  letter-spacing: 3px;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#header img {
+#icon-account {
   position: absolute;
-  width: 2%;
-  right: 0.25%;
-  top: 0.25%;
+  width: 25px;
+  right: 1%;
+  top: 1%;
 }
 
-#header img:hover {
+#icon-account:hover {
   cursor: pointer;
+}
+
+.icon-account-data {
+	display: none;
+	background-color: rgba(37, 48, 61, 1);
+	width: 7.5%;
+	position: absolute;
+	right: 0;
+	margin-top: -0.2%;
+	padding: 0.5%;
+}
+
+.icon-account-data h5 {
+	color: white;
+	margin: 5% 0% 2% 0%;
+}
+
+.icon-account-data a {
+	display: block;
+	font-size: 1em;
+	text-decoration: none;
+	color: white;
+	margin: 5% 0% 2% 0%;
+  transition: 0.5s;
+}
+
+.icon-account-data a:hover {
+  color: darkgray;
 }
 
 /* MAIN */
@@ -41,12 +144,121 @@ html, body {
 #main {
   width: 80%;
   height: auto;
-  min-height: 400px;
   margin-left: auto;
   margin-right: auto;
-  overflow: auto;
   margin-bottom: 5%;
   margin-top: 2.5%;
+}
+
+#error {
+  background-color: red;
+  float: right;
+  padding: 1%;
+  width: 20%;
+  margin: 2% 2% 0% 0%;
+  color: white;
+  background-color: rgba(37, 48, 61, 1);
+  border: 2px solid red;
+  animation: error 10s;
+  opacity: 0;
+}
+
+@-webkit-keyframes error {
+  0% {
+    opacity: 0;
+  }
+  15% {
+      opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+
+#main button {
+  border: 0;
+  background-color: rgba(37, 48, 61, 1);
+  float: right;
+  padding: 0.75%;
+  color: white;
+  width: 15%;
+}
+
+#main button:hover {
+  cursor: pointer;
+}
+
+/* MAIN SIDE NAVIGATION*/
+
+#main-sidenav {
+  width: 12.5%;
+  border-radius: 10px;
+  background-color: rgba(37, 48, 61, 1);
+  animation: sidenav 0.5s;
+  position: fixed;
+  padding-bottom: 0.5%;
+}
+
+#main-sidenav hr {
+  margin: 4% 0% 4% 0%;
+}
+
+#main-sidenav h5 {
+padding: 5% 0% 0% 5%;
+font-size: 1.5em;
+color: white;
+}
+
+#main-sidenav ul {
+  list-style: none;
+  width: 80%;
+  margin-left: 10%;
+}
+
+#main-sidenav ul li a {
+  display: block;
+  padding: 2% 0% 0% 5%;
+  margin: 2% 0% 2% 0%;
+  width: 65%;
+  color: white;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+#main-sidenav ul li a:hover {
+  color: darkgray;
+}
+
+.filter-active {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0% 0% 0% 0%;
+  color: white;
+}
+
+.filter-active text {
+  max-width: 80%;
+  display: block;
+  float: left;
+  overflow-x: hidden;
+  font-size: 1.2em;
+}
+
+.filter-active img {
+  width: 25px;
+  float: right;
+  transition: 0.5s;
+}
+
+.filter-active img:hover {
+  cursor: pointer;
+  background-color: red;
 }
 
 /* MAIN Beitrag */
@@ -56,33 +268,44 @@ html, body {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
+  animation: main 1.5s;
+  padding-bottom: 5vh;
 }
 
-#main-beitrag button {
-  border: 0;
-  background-color: rgba(37, 48, 61, 1);
-  float: right;
-  padding: 0.75%;
-  margin-right: 5%;
-  color: white;
+#main-beitrag h6 {
+	border: 0;
 }
 
-#main-beitrag button:hover {
-  cursor: pointer;
+@-webkit-keyframes main {
+  0% {
+    margin-top: 5%;
+    opacity: 0.5;
+  }
+  100% {
+    margin-top: 0%;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes sidenav {
+  0% {
+    margin-left: -5%;
+    opacity: 0.5;
+  }
+  100% {
+  margin-left: 0%;
+  opacity: 1;
+  }
 }
 
 .beitrag {
   background-color: rgba(37, 48, 61, 1);
   width: 80%;
-  max-height: 250px;
-  height: auto;
+  min-width: 320px;
+  max-height: 300px;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 1.5%;
-  margin-bottom: 1.5%;
-  float: left;
+  margin-top: 1%;
   border-radius: 10px;
 }
 
@@ -117,27 +340,30 @@ html, body {
   background-color: rgba(30, 45, 120, 0.5);
   width: 16%;
   height: auto;
+  max-height: 230px;
   text-align: center;
   font-size: 1em;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 
-.beitrag-account h3 {
+.beitrag-account a {
+  display: block;
   font-size: 1em;
   width: 80%;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 10%;
+  height: 1vh;
+  overflow: hidden;
+  padding: 5% 10% 30% 10%;
   color: white;
   font-weight: 100;
+  text-decoration: none;
 }
 
 .beitrag-account img {
   width: 80%;
   padding: 10%;
-  padding-top: 20%;
-  padding-bottom: 20%;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 #beitrag-account-vorschau {
@@ -181,7 +407,7 @@ html, body {
 
 .beitrag-img {
   width: 80%;
-  margin-top: -11%;
+  margin-top: -8%;
   float: right;
 }
 
@@ -197,6 +423,83 @@ html, body {
   opacity: 0.8;
 }
 
+
+@media only screen and (max-width: 800px) {
+  #header h1 a {
+    width: 80%;
+  }
+  #main-sidenav {
+    animation: none;
+    width: 80%;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+
+  }
+
+  #main-sidenav h5 {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 2% 0% 0% 0%;
+  }
+
+  #main-sidenav ul li a {
+    margin: 2% 0% 2% 0%;
+    font-size: 1rem;
+  }
+
+  #main-sidenav ul {
+    width: 100%;
+  }
+  .filter-active {
+    margin-top: -5px;
+    padding-bottom: 10px;
+  }
+  .filter-active span {
+    font-size: 1.2rem;
+  }
+
+  .filter-active img {
+    width: 25px;
+  }
+
+  #main button {
+    float: left;
+    width: 100%;
+    padding: 2%;
+  }
+
+  #main-beitrag {
+    float: left;
+    margin-top: 310px;
+    animation: none;
+    width: 100%;
+  }
+
+  .beitrag {
+    width: 500px;
+    margin-left: 0%;
+  }
+
+  .beitrag-account {
+    width: 80px;
+  }
+
+  .beitrag-account a {
+    font-size: 0.8em;
+    color: white;
+  }
+
+  .beitrag-top a {
+    font-size: 1rem;
+  }
+
+  .beitrag-text p {
+    font-size: 0.8rem;
+  }
+}
+
 /* ACCOUNT */
 
 #main-account {
@@ -206,7 +509,6 @@ html, body {
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
-  margin-bottom: 5%;
   margin-top: 2.5%;
 }
 
@@ -232,57 +534,135 @@ html, body {
 }
 
 #main-account form {
-  background-color: rgba(37, 48, 61, 1);
-  width: 20%;
+  border: 1px solid darkgray;
+  width: 40%;
+  min-width: 550px;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 2.5%;
-  padding-top: 2.5%;
+  height: auto;
+  padding-bottom: 2%;
+  margin-bottom: 5%;
+  /*-webkit-box-shadow: 13px 10px 19px -5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 13px 10px 19px -5px rgba(0,0,0,0.75);
+  box-shadow: 13px 10px 19px -5px rgba(0,0,0,0.75);*/
+  -webkit-animation: infoShow 1s;
 }
 
 #main-account form p {
-padding: 1%;
-width: 80%;
 margin-right: auto;
 margin-left: auto;
 font-size: 1.2em;
-margin-top: 4%;
-color: white;
-}
-
-#main-account form p input {
-  border: 0;
-  padding: 1%;
-  width: 100%;
+color: gray;
 }
 
 #main-account form input[type=submit] {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 6%;
-  margin-bottom: 3%;
+  margin-top: 15%;
   color: white;
   border: 0;
-  background-color: transparent;
-  font-size: 1.5em;
+  background-color: #00a9e2;
+  font-size: 1.3em;
   transition: 0.5s;
+  padding: 0.5% 8% 0.5% 8%;
+  border-radius: 10px;
 }
 
 #main-account form input[type=submit]:hover {
   cursor: pointer;
+  color: gray;
+}
+
+.form-account-container {
+  width: 100%;
+  height: auto;
+  min-height: 350px;
+  font-size: 1rem;
+  display: none;
+}
+
+.form-account-container h2 {
+  color: white;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  text-align: center;
+  width: 80%;
+  margin-bottom: 10%;
+}
+
+.form-account-container input {
+  padding: 2%;
+  width: 80%;
+  min-width: 100px;
+}
+
+.form-account-right {
+  float: right;
+  padding: 2% 0% 0% 0%;
+  width: 25%;
+  font-size: 1.0rem;
+  min-width: 250px;
+}
+.form-account-left {
+  float: left;
+  padding: 2% 0% 0% 5%;
+  width: 25%;
+  min-width: 250px;
+  font-size: 1.0rem;
+}
+
+
+
+.form-account-login {
+  width: 100%;
+  text-align: center;
+  margin: 4% 0% 2% 0%;
+  float: left;
+  font-size: 0.8rem;
+  display: block;
+}
+
+.form-account-login p {
+  width: 45%;
+  margin-bottom: 2%;
   color: darkgray;
+}
+
+.form-account-login input {
+  padding: 1%;
+}
+
+
+
+.account-register-info {
+  width: 40%;
+  min-width: 550px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid darkgray;
+  text-align: center;
+  padding: 1% 0% 1% 0%;
+}
+
+.account-register-info h5 {
+  font-weight: 100;
+  color: gray;
+}
+
+.account-register-info button {
+  background-color: transparent;
+  border: 0;
+  color: #4361ee;
 }
 
 /* Main Create */
 
 #main-create {
   width: 80%;
-  height: auto;
   min-height: 400px;
   margin-left: auto;
   margin-right: auto;
-  overflow: auto;
   margin-bottom: 5%;
   margin-top: 2.5%;
 }
@@ -293,7 +673,7 @@ color: white;
   margin-right: auto;
   margin-bottom: 5%;
   padding: 1%;
-  height: 100px;
+  min-height: 40px;
   -webkit-box-shadow: 2px 2px 5px -4px rgba(0,0,0,0.75);
   -moz-box-shadow: 2px 2px 5px -4px rgba(0,0,0,0.75);
   box-shadow: 2px 2px 5px -4px rgba(0,0,0,0.75);
@@ -301,7 +681,7 @@ color: white;
 }
 
 #create-info h1 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   margin-bottom: 1%;
 }
 
@@ -316,36 +696,35 @@ color: white;
 
 #create-container {
   background-color: rgba(37, 48, 61, 1);
-  width: 80%;
-  height: 330px;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 1.5%;
-  margin-bottom: 1.5%;
+  width: 90%;
+  min-width: 320px;
+  height: 250px;
+  margin-left: auto;
+  margin-right: auto;
+
   border-radius: 10px;
 }
 
 #create-container form {
-  width: 100%;
+  width: 83%;
   height: 330px;
+  float: left;
 }
 
 #create-container form textarea {
-  margin-top: 2%;
   padding: 1%;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  margin-left: 15%;
+  margin-top: 2%;
+  margin-left: 0%;
+  width: 50.5%;
+  resize: none;
 }
 
 #count {
-  position: absolute;
-  margin-left: 15%;
-  margin-top: -1.5%;
-  font-size: 1.1em;
+  float: right;
+  font-size: 1.1rem;
   color: white;
   font-weight: 100;
+  padding: 1%;
 }
 
 #create-container form input[type=text] {
@@ -367,35 +746,29 @@ color: white;
   padding: 0.25%;
   font-size: 1.4em;
   background-color: transparent;
-  border-bottom: 2px solid white;
-  border-left: 2px solid white;
   width: 15%;
   color: white;
 }
 
 #create-container form input[type=submit] {
-  margin-left: 5%;
-  padding: 0.25% 1% 0.25% 1%;
+  padding: 0.25% 2% 0.25% 2%;
+  margin-left: 3%;
 }
 
-#create-container form label {
-  float: left;
-  margin-top: 5%;
-  padding: 0.5%;
-  color: white;
+#create-container form select {
+  padding: 0.25%;
+  float: right;
+  margin-right: 10%;
 }
 
-#create-container form label select {
-  padding: 2%;
-}
+
 
 #create-sidebar {
   width: 16%;
   float: left;
-  height: 206px;
+  height: 250px;
   border-bottom-left-radius: 10px;
   border-top-left-radius: 10px;
-  padding: 5% 0% 5% 0%;
   background-color: rgba(50, 70, 120, 1);
   border-right: 1px solid white;
 }
@@ -403,7 +776,7 @@ color: white;
 #create-sidebar ul {
   list-style: none;
   text-align: center;
-
+  margin-top: 30%;
 }
 
 #create-sidebar ul li {
@@ -417,12 +790,11 @@ color: white;
   cursor: pointer;
 }
 
-#vorschau {
+#container-vorschau {
+  width: 80%;
+  float: right;
   display: none;
 }
-
-.HoverClassDisabled:hover {cursor: not-allowed !important;}
-.HoverClassPointer:hover {cursor: pointer !important;}
 
 /* PAY */
 
@@ -453,7 +825,7 @@ color: white;
   height: auto;
   float: left;
   border-radius: 10px;
-  border: 1px solid rgba(37, 48, 61, 1);
+  border: 1px solid darkgray;
   padding: 1% 0% 1% 0%;
 }
 
@@ -542,12 +914,11 @@ color: white;
   color: white;
   background-color: rgba(37, 48, 61, 1);
   width: 60%;
-  min-height: 80px;
+  min-height: 120px;
   text-align: center;
   padding-bottom: 2%;
   margin-left: auto;
   margin-right: 5%;
-  margin-top: 1%;
 }
 
 .pay-form h3 {
@@ -567,7 +938,6 @@ color: white;
   font-size: 1.2em;
   font-weight: 100;
   margin-bottom: 0%;
-  margin-top: -5%;
 }
 
 #form-kredit {
@@ -626,7 +996,7 @@ cursor: pointer;
 
 #myImg {
   width: 100%;
-  max-height: 100px;
+  max-height: 6vh;
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
@@ -672,7 +1042,6 @@ cursor: pointer;
 .container-img {
 	position: relative;
 	width: 15%;
-  height: 50px;
 	float: left;
   margin-left: 2%;
 }
@@ -682,10 +1051,72 @@ cursor: pointer;
   cursor: pointer;
 }
 
+.pointer:hover {
+  cursor: pointer;
+}
+
+#responsive-create-sidebar {
+  display: none;
+}
 
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
     .modal-content {
         width: 100%;
     }
+
+    /* CREATE */
+
+    #create-info {
+      width: 100%;
+    }
+
+    #create-info p {
+      font-size: 15px;
+    }
+
+    #create-info b {
+      font-size: 15px;
+    }
+
+    #create-info h1 {
+      font-size: 20px;
+    }
+
+    #responsive-create-sidebar {
+      display: block;
+      float: left;
+      width: 100%;
+      background-color: rgba(37, 48, 61, 1);
+      color: white;
+    }
+
+    #responsive-create-sidebar ul {
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+      list-style: none;
+      text-align: center;
+    }
+
+    #responsive-create-sidebar ul li {
+      display: inline-block;
+      font-size: 20px;
+      margin-right: 2%;
+      margin-right: 2%;
+      padding: 1% 0% 1% 0%;
+    }
+
+    #create-sidebar {
+      display: none;
+    }
+
+    #create-container {
+      float: left;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 0;
+    }
+
 }
